--- a/final-project.html
+++ b/final-project.html
@@ -4,12 +4,163 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Three Star Media</title>
 </head>
-<header>
-    final project
-</header>
 <body>
-    
+
+
+    <header>
+        <nav>
+             <div= class="container">
+            <img src="images/logo.png" alt="Thee Star Media"/>
+            <ul>
+               <li><a class="active" href="#home">Home</a></li>
+               <li><a href="#aboutus">About Us</a></li>
+               <li><a href="#srvices">Services</a></li>
+               <li><a href="#team">Team</a></li>
+               <li><a href="#contact">Contact</a></li>
+            </ul>
+            <form>
+                <input type="text" placeholder="Search" name="search">
+                <button>&#128269;</button>
+            </form>
+            </div> <!-- end container -->
+        </nav>
+
+        <div class="header-welcome">
+            <div class="container">
+                <h1>Welcome to Three Star Media</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                <button>Connect with us ▶</button>
+            </div> <!-- end container -->
+        </div>
+    </header>
+
+    <main>
+
+        <section class="section-about">
+            <div class="container">
+                <img src="images/about-us.jpg" alt="Ping pong table"/>
+                <h1>About Us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                <!-- Image on left, heading and paragraphs on the right using FLEXBOX -->
+            </div> <!-- end container -->
+        </section> <!-- end section-about -->
+
+        <section class="section-services"><!-- h2 heading, five div's each with h3, image, text and button ON A GRID -->
+            <div class="container">
+                <div>
+                    <h1> Our Services</h1>
+                    <img src="images/digital.jpg" alt="Mobile and Laptop"/>
+                     <h3> Digital Transformation</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                     <button>Digital Plans ▶</button>
+                </div>
+
+                <div class="marketing">
+                <img src="images/marketing.jpg" alt="Laptop"/>
+                     <h3> Marketing</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                    <button>Marketing Plans ▶</button>
+                </div>
+
+                 <div class="video">
+                <img src="images/video.jpg" alt="Youtube Page on Mobile"/>
+                    <h3> Video Production</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                    <button>Video Plans ▶</button>
+                </div>
+
+                <div class="web">
+                    <img src="images/web.jpg" alt=" Mobile and notebook"/>
+                    <h3> Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                    <button>Web Plans ▶</button>
+                </div>
+
+                 <div class="print">
+                    <img src="images/print.jpg" alt="poster"/>
+                    <h3> print</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                    <button>Print Plans ▶</button>
+                 </div>
+            </div> <!-- end container -->
+        </section> <!-- end section-services -->
+
+        <section class="section-vision">
+            <div class="container">
+                <img src="images/vision.jpg" alt="paper boat"/>
+                <h3>Our Vision</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                <button>Learn More ▶</button>
+               <!-- h3, paragraph and button -->
+            </div> <!-- end container -->
+        </section> <!-- end section-vision -->
+
+        <section class="section-team">
+            <div class="container">
+                <h2> Our Team</h2>
+                <img src="images/john.jpg" alt="John Doe"/>
+                     <div>
+                        <h3> John Doe</h3>
+                        <h4> CEO and Co-owner</h4>
+                         <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
+                    </div>
+                <img src="images/bob.jpg" alt="Bobe Rite"/>
+                    <div>
+                        <h3> Bob Rite</h3>
+                        <h4> CEO and Co-owner</h4>
+                         <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
+                </div>
+             <!-- h2, two div's with an image, two div's with h3, h4, and paragraph of text ON A GRID -->
+            </div> <!-- end container -->
+        </section> <!-- end section-team -->
+
+        <section class="section-contact">
+            <div class="container">
+                <h2> Contact Us</h2>
+                <h3> Send us a message</h3>
+                <form>
+                    <label for="fullname"> Full Name</label><br>
+                    <input id="fname" type="text"><br>
+                    <label for="email"> Email</label><br>
+                    <input id="email" type="text"><br>
+                    <label for="massage">Massage</label><br>
+                    <textarea  id="massage"></textarea><br>
+                    <button type="submit">Send</button><br>
+                 </form>
+                 <div class="location">
+                    <h2> Location</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5608.097075086685!2d-75.76225648848353!3d45.34783246492947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718ab4c4e65%3A0x86fd3e15e3355caf!2sAlgonquin%20College%2C%20Building%20A!5e0!3m2!1sen!2sca!4v1669348962951!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                 </div>
+                 <div class="hours">
+                    <h2> Hours of operation</h2>
+                 </div>
+                 <table>
+                    <tr>
+                      <th>Days</th>
+                      <th>Hours</th>
+                    </tr>
+                    <tr>
+                      <td>Monday-Friday</td>
+                      <td>9 AM- 6 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday-Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+               <!-- h2, form, google maps embed, table ON A GRID-->
+            </div> <!-- end container -->
+        </section> <!-- end section-contact -->
+
+    </main>
+    <footer>
+        <div class="container">
+           &copy; Copyright Three Star Media, 2020<br>
+           All images are taken from<a href="https://unsplash.com/">Unsplash</a>
+           <!-- two paragraphs of text -->
+        </div>
+    </footer>
 </body>
 </html>
