--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
              <div= class="container">
-            <img src="images/logo.png" alt="Thee Star Media"/>
+            <img src="images/logo.png" alt="Thee Star Media">
             <ul>
                <li><a class="active" href="#home">Home</a></li>
                <li><a href="#aboutus">About Us</a></li>
@@ -22,7 +22,7 @@
             </ul>
             <form>
                 <input type="text" placeholder="Search" name="search">
-                <button>&#128269;</button>
+                <button>&#128269</button><a href="#search"></a>
             </form>
             </div> <!-- end container -->
         </nav>
@@ -31,7 +31,7 @@
             <div class="container">
                 <h1>Welcome to Three Star Media</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                <button>Connect with us ▶</button>
+                <button>Connect with us ▶</button><a href="#connectwithus"></a>
             </div> <!-- end container -->
         </div>
     </header>
@@ -39,8 +39,8 @@
     <main>
 
         <section class="section-about">
-            <div class="container">
-                <img src="images/about-us.jpg" alt="Ping pong table"/>
+            <div class="container"> 
+                <img src="images/about-us.jpg" alt="Ping pong table">
                 <h1>About Us</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                 <!-- Image on left, heading and paragraphs on the right using FLEXBOX -->
@@ -49,50 +49,82 @@
 
         <section class="section-services"><!-- h2 heading, five div's each with h3, image, text and button ON A GRID -->
             <div class="container">
-                <div>
+                <div class="image">
                     <h1> Our Services</h1>
-                    <img src="images/digital.jpg" alt="Mobile and Laptop"/>
-                     <h3> Digital Transformation</h3>
+                    <img src="images/digital.jpg" alt="Mobile and Laptop">
+                </div>
+                <div class="h3">
+                        <h3> Digital Transformation</h3>
+                </div>
+                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                </div>
+                <div class="button">
                      <button>Digital Plans ▶</button>
                 </div>
 
-                <div class="marketing">
-                <img src="images/marketing.jpg" alt="Laptop"/>
+                <div class="image">
+                <img src="images/marketing.jpg" alt="Laptop">
+                </div>
+                <div class="h3">
                      <h3> Marketing</h3>
+                </div>
+                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                </div>
+                <div class="button">
                     <button>Marketing Plans ▶</button>
                 </div>
 
-                 <div class="video">
-                <img src="images/video.jpg" alt="Youtube Page on Mobile"/>
+                <div class="image">
+                <img src="images/video.jpg" alt="Youtube Page on Mobile">
+                </div>
+                <div class="h3">
                     <h3> Video Production</h3>
+                </div>
+                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                    <button>Video Plans ▶</button>
+                </div>
+                <div class="button">
+                        <button>Video Plans ▶</button>
                 </div>
 
-                <div class="web">
-                    <img src="images/web.jpg" alt=" Mobile and notebook"/>
+                <div class="image">
+                        <img src="images/web.jpg" alt=" Mobile and notebook">
+                </div>
+                <div class="h3">
                     <h3> Web Development</h3>
+                </div>
+                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                    <button>Web Plans ▶</button>
+                </div>
+                <div class="button">
+                        <button>Web Plans ▶</button>
                 </div>
 
-                 <div class="print">
-                    <img src="images/print.jpg" alt="poster"/>
-                    <h3> print</h3>
+                <div class="image">
+                    <img src="images/print.jpg" alt="poster">
+                </div>
+                <div class="h3">
+                        <h3> print</h3>
+                </div>
+                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                    <button>Print Plans ▶</button>
-                 </div>
+                </div>
+                <div class="button">
+                        <button>Print Plans ▶</button>
+                </div>
             </div> <!-- end container -->
         </section> <!-- end section-services -->
 
         <section class="section-vision">
             <div class="container">
-                <img src="images/vision.jpg" alt="paper boat"/>
+                <img src="images/vision.jpg" alt="paper boat">
                 <h3>Our Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                <button>Learn More ▶</button>
+                <div class="button">
+                    <button>Learn More ▶</button>
+                </div>
                <!-- h3, paragraph and button -->
             </div> <!-- end container -->
         </section> <!-- end section-vision -->
@@ -100,14 +132,14 @@
         <section class="section-team">
             <div class="container">
                 <h2> Our Team</h2>
-                <img src="images/john.jpg" alt="John Doe"/>
-                     <div>
+                <img src="images/john.jpg" alt="John Doe">
+                     <div class="information">
                         <h3> John Doe</h3>
                         <h4> CEO and Co-owner</h4>
                          <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
                     </div>
-                <img src="images/bob.jpg" alt="Bobe Rite"/>
-                    <div>
+                <img src="images/bob.jpg" alt="Bobe Rite">
+                    <div class="information">
                         <h3> Bob Rite</h3>
                         <h4> CEO and Co-owner</h4>
                          <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
@@ -121,7 +153,7 @@
                 <h2> Contact Us</h2>
                 <h3> Send us a message</h3>
                 <form>
-                    <label for="fullname"> Full Name</label><br>
+                    <label for="fname"> Full Name</label><br>
                     <input id="fname" type="text"><br>
                     <label for="email"> Email</label><br>
                     <input id="email" type="text"><br>
@@ -157,7 +189,7 @@
     </main>
     <footer>
         <div class="container">
-           &copy; Copyright Three Star Media, 2020<br>
+           &copy;Copyright Three Star Media, 2020<br>
            All images are taken from<a href="https://unsplash.com/">Unsplash</a>
            <!-- two paragraphs of text -->
         </div>
