--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-             <div= class="container">
+             <div class="container">
             <img src="images/logo.png" alt="Thee Star Media">
             <ul>
                <li><a class="active" href="#home">Home</a></li>
@@ -22,7 +22,7 @@
             </ul>
             <form>
                 <input type="text" placeholder="Search" name="search">
-                <button>&#128269</button><a href="#search"></a>
+                <button>&#128269;</button><a href="#search"></a>
             </form>
             </div> <!-- end container -->
         </nav>
@@ -39,7 +39,7 @@
     <main>
 
         <section class="section-about">
-            <div class="container"> 
+            <div class="container">
                 <img src="images/about-us.jpg" alt="Ping pong table">
                 <h1>About Us</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
@@ -49,70 +49,39 @@
 
         <section class="section-services"><!-- h2 heading, five div's each with h3, image, text and button ON A GRID -->
             <div class="container">
-                <div class="image">
-                    <h1> Our Services</h1>
+                <div class="our-service">
+                <h1> Our Services</h1>
                     <img src="images/digital.jpg" alt="Mobile and Laptop">
+                <h3> Digital Transformation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                <button>Digital Plans ▶</button>
                 </div>
-                <div class="h3">
-                        <h3> Digital Transformation</h3>
-                </div>
-                <div class="paragraph">
+                <div class="marketing">
+                    <img src="images/marketing.jpg" alt="Laptop">
+                    <h3> Marketing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                </div>
-                <div class="button">
-                     <button>Digital Plans ▶</button>
-                </div>
-
-                <div class="image">
-                <img src="images/marketing.jpg" alt="Laptop">
-                </div>
-                <div class="h3">
-                     <h3> Marketing</h3>
-                </div>
-                <div class="paragraph">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                </div>
-                <div class="button">
                     <button>Marketing Plans ▶</button>
                 </div>
 
-                <div class="image">
-                <img src="images/video.jpg" alt="Youtube Page on Mobile">
-                </div>
-                <div class="h3">
-                    <h3> Video Production</h3>
-                </div>
-                <div class="paragraph">
+                <div class="video-production">
+                    <img src="images/video.jpg" alt="Youtube Page on Mobile">
+                     <h3> Video Production</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                </div>
-                <div class="button">
-                        <button>Video Plans ▶</button>
+                    <button>Video Plans ▶</button>
                 </div>
 
-                <div class="image">
-                        <img src="images/web.jpg" alt=" Mobile and notebook">
-                </div>
-                <div class="h3">
+                <div class="Web-Development">
+                    <img src="images/web.jpg" alt=" Mobile and notebook">
                     <h3> Web Development</h3>
-                </div>
-                <div class="paragraph">
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                </div>
-                <div class="button">
-                        <button>Web Plans ▶</button>
+                    <button>Web Plans ▶</button>
                 </div>
 
-                <div class="image">
+                <div class="print">
                     <img src="images/print.jpg" alt="poster">
-                </div>
-                <div class="h3">
-                        <h3> print</h3>
-                </div>
-                <div class="paragraph">
+                    <h3> print</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                </div>
-                <div class="button">
-                        <button>Print Plans ▶</button>
+                    <button>Print Plans ▶</button>
                 </div>
             </div> <!-- end container -->
         </section> <!-- end section-services -->
@@ -122,28 +91,30 @@
                 <img src="images/vision.jpg" alt="paper boat">
                 <h3>Our Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
-                <div class="button">
-                    <button>Learn More ▶</button>
-                </div>
-               <!-- h3, paragraph and button -->
+                <button>Learn More ▶</button>
+                <!-- h3, paragraph and button -->
             </div> <!-- end container -->
         </section> <!-- end section-vision -->
 
         <section class="section-team">
             <div class="container">
                 <h2> Our Team</h2>
+                <div class="image-john">
                 <img src="images/john.jpg" alt="John Doe">
-                     <div class="information">
+                </div>
+                <div class="john-information">
                         <h3> John Doe</h3>
                         <h4> CEO and Co-owner</h4>
                          <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
-                    </div>
+                </div>
+                <div class="image-bob">
                 <img src="images/bob.jpg" alt="Bobe Rite">
-                    <div class="information">
+                </div>
+                    <div class="Bob-information">
                         <h3> Bob Rite</h3>
                         <h4> CEO and Co-owner</h4>
                          <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
-                </div>
+                    </div>
              <!-- h2, two div's with an image, two div's with h3, h4, and paragraph of text ON A GRID -->
             </div> <!-- end container -->
         </section> <!-- end section-team -->
@@ -161,14 +132,10 @@
                     <textarea  id="massage"></textarea><br>
                     <button type="submit">Send</button><br>
                  </form>
-                 <div class="location">
                     <h2> Location</h2>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5608.097075086685!2d-75.76225648848353!3d45.34783246492947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718ab4c4e65%3A0x86fd3e15e3355caf!2sAlgonquin%20College%2C%20Building%20A!5e0!3m2!1sen!2sca!4v1669348962951!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                 </div>
-                 <div class="hours">
                     <h2> Hours of operation</h2>
-                 </div>
-                 <table>
+                <table>
                     <tr>
                       <th>Days</th>
                       <th>Hours</th>
@@ -181,7 +148,7 @@
                       <td>Saturday-Sunday</td>
                       <td>Closed</td>
                     </tr>
-                  </table>
+                </table>
                <!-- h2, form, google maps embed, table ON A GRID-->
             </div> <!-- end container -->
         </section> <!-- end section-contact -->
