--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Star Media</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@1&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -12,9 +19,10 @@
     <header>
         <nav>
              <div class="container">
-            <img src="images/logo.png" alt="Thee Star Media">
+                <div class="logo">    <img src="images/logo.png" alt="Thee Star Media">
+             </div>
             <ul>
-               <li><a class="active" href="#home">Home</a></li>
+               <li class="current" ><a href="#home">Home</a></li>
                <li><a href="#aboutus">About Us</a></li>
                <li><a href="#srvices">Services</a></li>
                <li><a href="#team">Team</a></li>
