--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Star Media</title>
-
+    <script src="https://kit.fontawesome.com/5ad804c8c7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@1&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -19,7 +18,7 @@
     <header>
         <nav>
              <div class="container">
-                <div class="logo">    <img src="images/logo.png" alt="Thee Star Media">
+                <div id="logo">    <img src="images/logo.png" alt="Thee Star Media">
              </div>
             <ul>
                <li class="current" ><a href="#home">Home</a></li>
@@ -28,9 +27,9 @@
                <li><a href="#team">Team</a></li>
                <li><a href="#contact">Contact</a></li>
             </ul>
-            <form>
+            <form >
                 <input type="text" placeholder="Search" name="search">
-                <button>&#128269;</button><a href="#search"></a>
+                <button type="submit"><i class= "fa-solid fa-magnifying-glass" ></i></button><a href="#search"></a>
             </form>
             </div> <!-- end container -->
         </nav>
@@ -48,44 +47,49 @@
 
         <section class="section-about">
             <div class="container">
-                <img src="images/about-us.jpg" alt="Ping pong table">
-                <h1>About Us</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                 <div>
+                     <img src="images/about-us.jpg" alt="Ping pong table">
+                </div>
+                <div class= "AboutContent">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+                </div>
                 <!-- Image on left, heading and paragraphs on the right using FLEXBOX -->
             </div> <!-- end container -->
         </section> <!-- end section-about -->
 
         <section class="section-services"><!-- h2 heading, five div's each with h3, image, text and button ON A GRID -->
             <div class="container">
-                <div class="our-service">
-                <h1> Our Services</h1>
-                    <img src="images/digital.jpg" alt="Mobile and Laptop">
+                <h2> Our Services</h2>
+                <div class="Service Service-Block-1">
+                <img src="images/digital.jpg" alt="Mobile and Laptop">
                 <h3> Digital Transformation</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                 <button>Digital Plans ▶</button>
                 </div>
-                <div class="marketing">
+                <div class="Service Service-Block-2" >
                     <img src="images/marketing.jpg" alt="Laptop">
                     <h3> Marketing</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                     <button>Marketing Plans ▶</button>
                 </div>
 
-                <div class="video-production">
+                <div class="Service Service-Block-3">
                     <img src="images/video.jpg" alt="Youtube Page on Mobile">
                      <h3> Video Production</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                     <button>Video Plans ▶</button>
                 </div>
 
-                <div class="Web-Development">
+                <div class="Service Service-Block-4">
                     <img src="images/web.jpg" alt=" Mobile and notebook">
                     <h3> Web Development</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                     <button>Web Plans ▶</button>
                 </div>
 
-                <div class="print">
+                <div class="Service Service-Block-5">
                     <img src="images/print.jpg" alt="poster">
                     <h3> print</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
@@ -94,10 +98,9 @@
             </div> <!-- end container -->
         </section> <!-- end section-services -->
 
-        <section class="section-vision">
+        <section class="Vision">
             <div class="container">
-                <img src="images/vision.jpg" alt="paper boat">
-                <h3>Our Vision</h3>
+                <h3>Our Vision </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
                 <button>Learn More ▶</button>
                 <!-- h3, paragraph and button -->
@@ -106,29 +109,34 @@
 
         <section class="section-team">
             <div class="container">
-                <h2> Our Team</h2>
-                <div class="image-john">
-                <img src="images/john.jpg" alt="John Doe">
+               <h2> Our Team</h2>
+               <div class="Service Team-Block-1">
+                    <div class="Info">
+                        <img src="images/john.jpg" alt="John Doe">
+                        <div class="Info-Text">
+                            <h3> John Doe</h3>
+                            <h4> CEO and Co-owner</h4>
+                            <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
+                        </div>
+                    </div>
                 </div>
-                <div class="john-information">
-                        <h3> John Doe</h3>
-                        <h4> CEO and Co-owner</h4>
-                         <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
-                </div>
-                <div class="image-bob">
-                <img src="images/bob.jpg" alt="Bobe Rite">
-                </div>
-                    <div class="Bob-information">
-                        <h3> Bob Rite</h3>
-                        <h4> CEO and Co-owner</h4>
-                         <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
+                <div class="Service Team-Block-2">
+                    <div class="Info BobInfo">
+                        <img src="images/bob.jpg" alt="Bobe Rite">
+                        <div class="Info-Text">
+                            <h3> Bob Rite</h3>
+                            <h4> CEO and Co-owner</h4>
+                            <P>Lorem ipsum dolor sit amet consectetur adipiscing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</P>
+                        </div>
                     </div>
              <!-- h2, two div's with an image, two div's with h3, h4, and paragraph of text ON A GRID -->
-            </div> <!-- end container -->
+                </div> <!-- end container -->
+            </div>
         </section> <!-- end section-team -->
 
         <section class="section-contact">
             <div class="container">
+                <div  class="contact Contact-Block-1">
                 <h2> Contact Us</h2>
                 <h3> Send us a message</h3>
                 <form>
@@ -140,10 +148,14 @@
                     <textarea  id="massage"></textarea><br>
                     <button type="submit">Send</button><br>
                  </form>
-                    <h2> Location</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5608.097075086685!2d-75.76225648848353!3d45.34783246492947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718ab4c4e65%3A0x86fd3e15e3355caf!2sAlgonquin%20College%2C%20Building%20A!5e0!3m2!1sen!2sca!4v1669348962951!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <h2> Hours of operation</h2>
-                <table>
+                </div>
+                <div class="contact Contact-Block-2">
+                     <h2> Hours of operation</h2>
+                    <table>
+                        <colgroup>
+                            <col class="big-cell">
+                            <col>
+                        </colgroup>
                     <tr>
                       <th>Days</th>
                       <th>Hours</th>
@@ -156,18 +168,24 @@
                       <td>Saturday-Sunday</td>
                       <td>Closed</td>
                     </tr>
-                </table>
-               <!-- h2, form, google maps embed, table ON A GRID-->
+                    </table>
+                </div>
+                <div class="contact Contact-Block-3">
+                    <h2> Location</h2>
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1435386.436928966!2d-77.51399305542192!3d45.35912382823269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669478029063!5m2!1sen!2sca" title="map" width="600" height="450" style="border:0;" allowfullscreenloading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div><!-- h2, form, google maps embed, table ON A GRID-->
             </div> <!-- end container -->
         </section> <!-- end section-contact -->
 
     </main>
-    <footer>
-        <div class="container">
-           &copy;Copyright Three Star Media, 2020<br>
-           All images are taken from<a href="https://unsplash.com/">Unsplash</a>
-           <!-- two paragraphs of text -->
-        </div>
-    </footer>
+            <footer>
+                <div class="container">
+                    <p> &copy; Copyright Three Star Media, 2020</P>
+                    <p>All images are taken from <a href="https://unsplash.com/" id="footer-link">Unsplash</a> </p>
+                     <!-- two paragraphs of text -->
+                 </div>
+            </footer>
 </body>
 </html>
